--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "src/styles.scss",
               "node_modules/primeflex/primeflex.css",
-              "src/app/scss/theme.scss",
+              "src/app/core/scss/theme.scss",
               "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
